--- a/inlogscherm.html
+++ b/inlogscherm.html
@@ -4,29 +4,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="/css/" rel="stylesheet">
+    <link href="/Projectweb/css/main.css" rel="stylesheet">
     <title>Inlogscherm</title>
 </head>
 
 <body>
+
     <header>
-        <h1>Meld nu aan voor verhalen in de trein!</h1>
+        <a href="index.html">
+            <button>Ga terug</button>
+        </a>
+
+        <h1>Verhalen website</h1>
+        <nav>
+            <a href="/Projectweb/inlogscherm.html"> <img id="search" src="/Projectweb/Assets/searchicon.png" alt="searchbutton"></a>
+            <a href="/Projectweb/inlogscherm.html"> <img id="profile" src="/Projectweb/Assets/gebruikericon.png" alt="profilebutton">
+            </a>
+        </nav>
     </header>
+    <h2>Meld je nu aan voor verhalen in de trein!</h2>
+
     <form>
         <fieldset>
-            <legend>Maak een account aan</legend>
+            <legend>Log in met Facebook</legend>
             <label for="naam">Naam</label>
-            <input type="text" placeholder="Voornaam">
-            <input type="text" placeholder="Achternaam">
+            <input type="text" placeholder="Naam">
             <label for="email">Emailadres</label>
             <input type="email" placeholder="Email">
-            <label for="leeftijd">Leeftijd</label>
-            <input type="number" placeholder="Leeftijd">
             <label for="Gebruikersnaam">Gebruikersnaam</label>
             <input type="text" placeholder="Gebruikersnaam">
             <label for="wachtwoord">Wachtwoord</label>
             <input type="password" placeholder="8-15 karakters">
-            <button type="submit">Meld aan</button>
+            <button type="submit">Aanmelden</button>
         </fieldset>
     </form>
 
