--- a/inlogscherm.html
+++ b/inlogscherm.html
@@ -15,8 +15,9 @@
             <button>Ga terug</button>
         </a>
 
-        <h1>Verhalen website</h1>
+
         <nav>
+            <h1>Verhalen website</h1>
             <a href="/Projectweb/inlogscherm.html"> <img id="search" src="/Projectweb/Assets/searchicon.png" alt="searchbutton"></a>
             <a href="/Projectweb/inlogscherm.html"> <img id="profile" src="/Projectweb/Assets/gebruikericon.png" alt="profilebutton">
             </a>
@@ -34,7 +35,7 @@
             <label for="Gebruikersnaam">Gebruikersnaam</label>
             <input type="text" placeholder="Gebruikersnaam">
             <label for="wachtwoord">Wachtwoord</label>
-            <input type="password" placeholder="8-15 karakters">
+            <input type="password" placeholder="8-15 karakters" id="wachtwoord">
             <button type="submit">Aanmelden</button>
         </fieldset>
     </form>
