--- a/index.html
+++ b/index.html
@@ -11,87 +11,122 @@
 <!-- body -->
 
 <body>
+
     <header>
 
-        <h1>Verhalen website</h1>
         <nav>
+
             <ul id="search">
+
                 <li>
-                    <a href="/Projectweb/inlogscherm.html"> <img id="search" src="/Projectweb/Assets/searchicon.png" alt="searchbutton"></a>
+                    <a href="/Projectweb/inlogscherm.html"> <img id="profile" src="/Projectweb/Assets/gebruikericon.png" alt="profilebutton">
+                    </a>
                 </li>
+
+                <li>
+                    <a href=""> <img id="search" src="/Projectweb/Assets/searchicon.png" alt="searchbutton"></a>
+                </li>
+
+
             </ul>
 
 
-            <a href="/Projectweb/inlogscherm.html"> <img id="profile" src="/Projectweb/Assets/gebruikericon.png" alt="profilebutton">
-            </a>
+            <h1>Verhalen website</h1>
+            <form action="/">
+                <label for="searching">Zoeken</label>
+                <input type="text" id="searching">
+                <button>Ga!</button>
+            </form>
         </nav>
     </header>
+    <img id="reading" src="Assets/reading.jpg">
     <main>
-        <a href="#submenu">Sorteren</a>
-        <a href="#">
-            <ul id="submenu">
 
-                <li>Meeste likes</li>
-
-                <li>Aantal woorden</li>
-
-
-
-            </ul>
-        </a>
         <nav>
             <ul id="onze suggesties">
                 <li>
-                    <h2>Onze suggesties</h2>
+                    <a href="">Onze suggesties</a>
                 </li>
             </ul>
             <ul id="willekeurig verhaal">
                 <li>
-                    <h2>Willekeurig verhaal</h2>
+                    <a href="">Willekeurige verhalen</a>
                 </li>
             </ul>
             <ul id="vrienden">
                 <li>
-                    <h2>Vrienden</h2>
+                    <a href="">Mijn vrienden</a>
                 </li>
             </ul>
         </nav>
 
-        <article>
-            <h3>Beroemd</h3>
-            <p>Vlak voordat ik de bus uitstap bedank ik de buschauffeur via de spiegel voor zijn diensten. Hij zwaait joviaal terug. ‘Mijn vrouw is een groot fan van u’, roept hij. ‘Doe haar de groeten’, zeg ik en stap uit. Centraal Station. Ik duw mijn zoon voort. Hij slaapt.</p>
 
-            <a href="/Projectweb/inlogscherm.html"> <img id="heart" src="/Projectweb/Assets/hearticon.png" alt="hearticon"></a>
-            <a href="/Projectweb/inlogscherm.html"> <img id="add" src="/Projectweb/Assets/plusicon.png" alt="addicon"></a>
+        <a href="#submenu">Sorteren</a>
 
-            <footer>Posted on 11 juli 2011 by Molovich</footer>
+        <ul id="submenu">
 
-            <button>Lees verder</button>
+            <li><a href="">Meeste likes</a></li>
 
-        </article>
-        <article>
-            <h3>Blind</h3>
-            <p>Piepende remmen, bus 21 komt tot stilstand. De stem van de buschauffeur, naar mij gericht, zakelijk, niet vriendelijk, niet onvriendelijk: ‘Centraal Station, eindhalte’. Het sissende geluid van busdeuren die open gaan. Mensen drommen naar buiten. Voorzichtig vind ik mijn weg naar de uitgang en stap uit.</p>
+            <li><a href="">Aantal woorden</a></li>
 
-            <a href="/Projectweb/inlogscherm.html"> <img id="heart" src="/Projectweb/Assets/hearticon.png" alt="hearticon"></a>
-            <a href="/Projectweb/inlogscherm.html"> <img id="add" src="/Projectweb/Assets/plusicon.png" alt="addicon"></a>
-
-            <footer>Posted on 3 juni 2011 by Molovich</footer>
-
-            <button>Lees verder</button>
+        </ul>
+        <section>
+            <article>
+                <h3>Alzheimer</h3>
+                <p>Ik stap uit, euh… Hoe heet het? Zo’n vervoersdinges op wielen. Van de gemeente. Wit met blauw. Kom. Lijn 12. Of was het 21? Ik weet het niet. Ik stap uit en loop achter een wagentje aan. Van wie is dat wagentje? Ik weet het niet. Ik kijk in het wagentje. Er ligt een ventje...</p>
 
 
-        </article>
-        <article>
-            <h3>Gefrustreerd</h3>
-            <p>Ik stap uit die godverdomde stinkbus. De mensen krioelen als mieren over het stationsplein. Ik wil ze vertrappen onder m’n schoenen. Vermorzelen. Verbrijzelen. De klootzakken en kakkerlakken. Met hun nietszeggende leventjes en hun waardeloze gedachten. Ik duw een wagentje met mijn lieveling voort. Ik heb een dekentje over hem gelegd. </p>
+                <footer>
+                    <a href="/Projectweb/inlogscherm.html"> <img id="heart" src="/Projectweb/Assets/hearticon.png" alt="hearticon"></a>
+                    <a href="/Projectweb/inlogscherm.html"> <img id="add" src="/Projectweb/Assets/plusicon.png" alt="addicon"></a>
+                    <p>23 keer leuk gevonden</p>
+                </footer>
 
-            <a href="/Projectweb/inlogscherm.html"> <img id="heart" src="/Projectweb/Assets/hearticon.png" alt="hearticon"></a>
-            <a href="/Projectweb/inlogscherm.html"> <img id="add" src="/Projectweb/Assets/plusicon.png" alt="addicon"></a>
-            <footer> Posted on 12 april 2011 by Molovich</footer>
+                <a href="/Projectweb/artikelalzheimer.html" id="leesverder">Lees verder</a>
 
-            <button>Lees verder</button>
-        </article>
+            </article>
+            <article>
+                <h3>Alzheimer</h3>
+                <p>Ik stap uit, euh… Hoe heet het? Zo’n vervoersdinges op wielen. Van de gemeente. Wit met blauw. Kom. Lijn 12. Of was het 21? Ik weet het niet. Ik stap uit en loop achter een wagentje aan. Van wie is dat wagentje? Ik weet het niet. Ik kijk in het wagentje. Er ligt een ventje...</p>
+
+
+                <footer>
+                    <a href="/Projectweb/inlogscherm.html"> <img id="heart" src="/Projectweb/Assets/hearticon.png" alt="hearticon"></a>
+                    <a href="/Projectweb/inlogscherm.html"> <img id="add" src="/Projectweb/Assets/plusicon.png" alt="addicon"></a>
+                    <p>44 keer leuk gevonden</p>
+                </footer>
+
+                <a href="/Projectweb/artikelalzheimer.html" id="leesverder">Lees verder</a>
+
+            </article>
+            <article>
+                <h3>Blind</h3>
+                <p>Piepende remmen, bus 21 komt tot stilstand. De stem van de buschauffeur, naar mij gericht, zakelijk, niet vriendelijk, niet onvriendelijk: ‘Centraal Station, eindhalte’. Het sissende geluid van busdeuren die open gaan. Mensen drommen naar buiten. Voorzichtig vind ik mijn weg naar de uitgang en stap uit.</p>
+
+                <footer>
+                    <a href="/Projectweb/inlogscherm.html"> <img id="heart" src="/Projectweb/Assets/hearticon.png" alt="hearticon"></a>
+
+                    <a href="/Projectweb/inlogscherm.html"> <img id="add" src="/Projectweb/Assets/plusicon.png" alt="addicon"></a>
+                    <p>12 keer leuk gevonden</p>
+                </footer>
+
+                <a href="/Projectweb/artikelblind.html" id="leesverder">Lees verder</a>
+
+
+            </article>
+            <article>
+                <h3>Kinderboek</h3>
+                <p>Kijk, daar gaat Max. Dag Max! Hij stapt uit de bus. Wat duwt hij daar vooruit? Jawel, een heuse kinderwagen! En wat voor één! Een groene! Zijn zoontje ligt er in te slapen. Die heeft gelukkig geen last van de kou. Want het is koud joh! Het regent een beetje en het waait flink. Alle...</p>
+
+                <footer>
+                    <a href="/Projectweb/inlogscherm.html"> <img id="heart" src="/Projectweb/Assets/hearticon.png" alt="hearticon"></a>
+                    <a href="/Projectweb/inlogscherm.html"> <img id="add" src="/Projectweb/Assets/plusicon.png" alt="addicon"></a>
+                    <p> 3 keer leuk gevonden</p>
+                </footer>
+
+                <a href="/Projectweb/artikelkinderboek.html" id="leesverder">Lees verder</a>
+            </article>
+        </section>
     </main>
 </body>
 
