--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </form>
         </nav>
     </header>
-    <img id="reading" src="Assets/reading.jpg">
+    <img id="reading" src="Assets/grandma.jpg">
     <main>
 
         <nav>
