--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </form>
         </nav>
     </header>
-    <img id="reading" src="Assets/grandma.jpg">
+    <img id="reading" src="Assets/grandma2.png">
     <main>
 
         <nav>
@@ -61,13 +61,14 @@
         </nav>
 
 
-        <a href="#submenu">Sorteren</a>
+        <a href="#submenu">Sorteren > </a>
 
         <ul id="submenu">
 
             <li><a href="">Meeste likes</a></li>
-
-            <li><a href="">Aantal woorden</a></li>
+            <li><a href="">Minste likes</a></li>
+            <li><a href="">Meeste aantal woorden</a></li>
+            <li><a href="">Minste aantal woorden</a></li>
 
         </ul>
         <section>
@@ -77,12 +78,13 @@
 
 
                 <footer>
+                    <p>23 keer leuk gevonden</p>
                     <a href="/Projectweb/inlogscherm.html"> <img id="heart" src="/Projectweb/Assets/hearticon.png" alt="hearticon"></a>
                     <a href="/Projectweb/inlogscherm.html"> <img id="add" src="/Projectweb/Assets/plusicon.png" alt="addicon"></a>
-                    <p>23 keer leuk gevonden</p>
+
                 </footer>
 
-                <a href="/Projectweb/artikelalzheimer.html" id="leesverder">Lees verder</a>
+                <a href="/Projectweb/artikelalzheimer.html" id="leesverder">Lees verder ></a>
 
             </article>
             <article>
@@ -91,12 +93,13 @@
 
 
                 <footer>
+                    <p>44 keer leuk gevonden</p>
                     <a href="/Projectweb/inlogscherm.html"> <img id="heart" src="/Projectweb/Assets/hearticon.png" alt="hearticon"></a>
                     <a href="/Projectweb/inlogscherm.html"> <img id="add" src="/Projectweb/Assets/plusicon.png" alt="addicon"></a>
-                    <p>44 keer leuk gevonden</p>
+
                 </footer>
 
-                <a href="/Projectweb/artikelalzheimer.html" id="leesverder">Lees verder</a>
+                <a href="/Projectweb/artikelalzheimer.html" id="leesverder">Lees verder ></a>
 
             </article>
             <article>
@@ -104,13 +107,14 @@
                 <p>Piepende remmen, bus 21 komt tot stilstand. De stem van de buschauffeur, naar mij gericht, zakelijk, niet vriendelijk, niet onvriendelijk: ‘Centraal Station, eindhalte’. Het sissende geluid van busdeuren die open gaan. Mensen drommen naar buiten. Voorzichtig vind ik mijn weg naar de uitgang en stap uit.</p>
 
                 <footer>
+                    <p>12 keer leuk gevonden</p>
                     <a href="/Projectweb/inlogscherm.html"> <img id="heart" src="/Projectweb/Assets/hearticon.png" alt="hearticon"></a>
 
                     <a href="/Projectweb/inlogscherm.html"> <img id="add" src="/Projectweb/Assets/plusicon.png" alt="addicon"></a>
-                    <p>12 keer leuk gevonden</p>
+
                 </footer>
 
-                <a href="/Projectweb/artikelblind.html" id="leesverder">Lees verder</a>
+                <a href="/Projectweb/artikelblind.html" id="leesverder">Lees verder ></a>
 
 
             </article>
@@ -119,12 +123,13 @@
                 <p>Kijk, daar gaat Max. Dag Max! Hij stapt uit de bus. Wat duwt hij daar vooruit? Jawel, een heuse kinderwagen! En wat voor één! Een groene! Zijn zoontje ligt er in te slapen. Die heeft gelukkig geen last van de kou. Want het is koud joh! Het regent een beetje en het waait flink. Alle...</p>
 
                 <footer>
+                    <p> 3 keer leuk gevonden</p>
                     <a href="/Projectweb/inlogscherm.html"> <img id="heart" src="/Projectweb/Assets/hearticon.png" alt="hearticon"></a>
                     <a href="/Projectweb/inlogscherm.html"> <img id="add" src="/Projectweb/Assets/plusicon.png" alt="addicon"></a>
-                    <p> 3 keer leuk gevonden</p>
+
                 </footer>
 
-                <a href="/Projectweb/artikelkinderboek.html" id="leesverder">Lees verder</a>
+                <a href="/Projectweb/artikelkinderboek.html" id="leesverder">Lees verder ></a>
             </article>
         </section>
     </main>
