--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="/Projectweb/css/main.css" rel="stylesheet">
+    <link href="/Projectweb/css/header.css" rel="stylesheet">
     <title>Verhalen voor onderweg</title>
 </head>
 
@@ -71,6 +72,7 @@
             <li><a href="">Minste aantal woorden</a></li>
 
         </ul>
+
         <section>
             <article>
                 <h3>Alzheimer</h3>
