--- a/inlogscherm.html
+++ b/inlogscherm.html
@@ -5,41 +5,61 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="/Projectweb/css/main.css" rel="stylesheet">
+    <link href="/Projectweb/css/header.css" rel="stylesheet">
+    <link href="/Projectweb/css/signup.css" rel="stylesheet">
     <title>Inlogscherm</title>
 </head>
 
 <body>
 
     <header>
-        <a href="index.html">
-            <button>Ga terug</button>
-        </a>
-
-
         <nav>
+
+            <ul id="search">
+
+                <li>
+                    <a href="/Projectweb/inlogscherm.html"> <img id="profile" src="/Projectweb/Assets/gebruikericon.png" alt="profilebutton">
+                    </a>
+                </li>
+
+                <li>
+                    <a href=""> <img id="search" src="/Projectweb/Assets/searchicon.png" alt="searchbutton"></a>
+                </li>
+
+
+            </ul>
+
+
             <h1>Verhalen website</h1>
-            <a href="/Projectweb/inlogscherm.html"> <img id="search" src="/Projectweb/Assets/searchicon.png" alt="searchbutton"></a>
-            <a href="/Projectweb/inlogscherm.html"> <img id="profile" src="/Projectweb/Assets/gebruikericon.png" alt="profilebutton">
-            </a>
+            <form action="/">
+                <label for="searching">Zoeken</label>
+                <input type="text" id="searching">
+                <button>Ga!</button>
+            </form>
         </nav>
     </header>
-    <h2>Meld je nu aan voor verhalen in de trein!</h2>
+    <img id="reading" src="Assets/grandma2.png">
+    <main>
 
-    <form>
-        <fieldset>
-            <legend>Log in met Facebook</legend>
-            <label for="naam">Naam</label>
-            <input type="text" placeholder="Naam">
-            <label for="email">Emailadres</label>
-            <input type="email" placeholder="Email">
-            <label for="Gebruikersnaam">Gebruikersnaam</label>
-            <input type="text" placeholder="Gebruikersnaam">
-            <label for="wachtwoord">Wachtwoord</label>
-            <input type="password" placeholder="8-15 karakters" id="wachtwoord">
-            <button type="submit">Aanmelden</button>
-        </fieldset>
-    </form>
+        <h2>Meld je nu aan voor verhalen in de trein!</h2>
 
+        <form>
+            <fieldset>
+                <legend>Maak een account aan</legend>
+                <label for="naam">Naam</label>
+                <input type="text" placeholder="Naam">
+                <label for="email">Emailadres</label>
+                <input type="email" placeholder="Email">
+                <label for="Gebruikersnaam">Gebruikersnaam</label>
+                <input type="text" placeholder="Gebruikersnaam">
+                <label for="wachtwoord">Wachtwoord</label>
+                <input type="password" placeholder="8-15 karakters" id="wachtwoord">
+
+                <a href="https://nl-nl.facebook.com/" id="facebook">Login met Facebook ></a>
+                <a href="/Projectweb/index.html" id="aanmelden">Aanmelden ></a>
+            </fieldset>
+        </form>
+    </main>
 </body>
 
 </html>
