--- a/artikelkinderboek.html
+++ b/artikelkinderboek.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="/Projectweb/css/main.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
+    <link href="css/header.css" rel="stylesheet">
     <title>Verhalen voor onderweg</title>
 </head>
 
@@ -19,15 +20,33 @@
             <ul id="search">
 
                 <li>
-                    <a href="/Projectweb/inlogscherm.html"> <img id="search" src="/Projectweb/Assets/searchicon.png" alt="searchbutton"></a>
-                </li>
-                <li>
-                    <a href="/Projectweb/inlogscherm.html"> <img id="profile" src="/Projectweb/Assets/gebruikericon.png" alt="profilebutton">
+                    <a href="inlogscherm.html"> <img id="profile" src="Assets/gebruikericon.png" alt="profilebutton">
                     </a>
                 </li>
 
+                <li>
+                    <a href=""> <img id="search" src="Assets/searchicon.png" alt="searchbutton"></a>
+                </li>
+
+
             </ul>
-            <h1>Verhalen website</h1>
+
+
+            <a href="index.html">
+                <h1>Verhalen website</h1>
+            </a>
+            <form action="/">
+                <label for="searching">Zoeken</label>
+                <input type="text" id="searching">
+                <button>Ga!</button>
+            </form>
         </nav>
     </header>
-    <img id="blind" src="/Projectweb/Assets/Kinderboekverhaal.jpg">
+
+    <main>
+
+
+        <img id="kinderboekverhaal" src="Assets/Kinderboekverhaal.jpg" alt="kinderboekverhaal">
+    </main>
+</body>
+</html>
