--- a/inlogscherm.html
+++ b/inlogscherm.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="/Projectweb/css/main.css" rel="stylesheet">
-    <link href="/Projectweb/css/header.css" rel="stylesheet">
-    <link href="/Projectweb/css/signup.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
+    <link href="css/header.css" rel="stylesheet">
+    <link href="css/signup.css" rel="stylesheet">
     <title>Inlogscherm</title>
 </head>
 
@@ -18,21 +18,23 @@
             <ul id="search">
 
                 <li>
-                    <a href="/Projectweb/inlogscherm.html"> <img id="profile" src="/Projectweb/Assets/gebruikericon.png" alt="profilebutton">
+                    <a href="inlogscherm.html"> <img id="profile" src="Assets/gebruikericon.png" alt="profilebutton">
                     </a>
                 </li>
 
                 <li>
-                    <a href=""> <img id="search" src="/Projectweb/Assets/searchicon.png" alt="searchbutton"></a>
+                    <label for="searching"> <img id="search" src="Assets/searchicon.png" alt="searchbutton"></label>
                 </li>
 
 
             </ul>
 
 
-            <h1>Verhalen website</h1>
+            <a href="index.html">
+                <h1>NS Verhalen voor onderweg</h1>
+            </a>
+
             <form action="/">
-                <label for="searching">Zoeken</label>
                 <input type="text" id="searching">
                 <button>Ga!</button>
             </form>
@@ -41,7 +43,7 @@
     <img id="reading" src="Assets/grandma2.png">
     <main>
 
-        <h2>Meld je nu aan voor verhalen in de trein!</h2>
+        <h2>Meld je nu aan voor verhalen onderweg!</h2>
 
         <form>
             <fieldset>
@@ -55,8 +57,9 @@
                 <label for="wachtwoord">Wachtwoord</label>
                 <input type="password" placeholder="8-15 karakters" id="wachtwoord">
 
+
                 <a href="https://nl-nl.facebook.com/" id="facebook">Login met Facebook ></a>
-                <a href="/Projectweb/index.html" id="aanmelden">Aanmelden ></a>
+                <a href="index.html" id="aanmelden">Aanmelden ></a>
             </fieldset>
         </form>
     </main>
