--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="/Projectweb/css/main.css" rel="stylesheet">
-    <link href="/Projectweb/css/header.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
+    <link href="css/header.css" rel="stylesheet">
     <title>Verhalen voor onderweg</title>
 </head>
 
@@ -20,21 +20,23 @@
             <ul id="search">
 
                 <li>
-                    <a href="/Projectweb/inlogscherm.html"> <img id="profile" src="/Projectweb/Assets/gebruikericon.png" alt="profilebutton">
+                    <a href="inlogscherm.html"> <img id="profile" src="Assets/gebruikericon.png" alt="profilebutton">
                     </a>
                 </li>
 
                 <li>
-                    <a href=""> <img id="search" src="/Projectweb/Assets/searchicon.png" alt="searchbutton"></a>
+                    <label for="searching"> <img id="search" src="Assets/searchicon.png" alt="searchbutton"></label>
                 </li>
 
 
             </ul>
 
 
-            <h1>Verhalen website</h1>
+            <a href="index.html">
+                <h1>NS Verhalen voor onderweg</h1>
+            </a>
+
             <form action="/">
-                <label for="searching">Zoeken</label>
                 <input type="text" id="searching">
                 <button>Ga!</button>
             </form>
@@ -46,12 +48,12 @@
         <nav>
             <ul id="onze suggesties">
                 <li>
-                    <a href="">Onze suggesties</a>
+                    <a href="suggesties.html">Onze suggesties</a>
                 </li>
             </ul>
             <ul id="willekeurig verhaal">
                 <li>
-                    <a href="">Willekeurige verhalen</a>
+                    <a href="index.html">Willekeurige verhalen</a>
                 </li>
             </ul>
             <ul id="vrienden">
@@ -62,12 +64,12 @@
         </nav>
 
 
-        <a href="#submenu">Sorteren > </a>
+        <a href="#submenu">Sorteren ></a>
 
         <ul id="submenu">
 
-            <li><a href="">Meeste likes</a></li>
-            <li><a href="">Minste likes</a></li>
+            <li><a href="meestelikes.html">Meeste likes</a></li>
+            <li><a href="minstelikes.html">Minste likes</a></li>
             <li><a href="">Meeste aantal woorden</a></li>
             <li><a href="">Minste aantal woorden</a></li>
 
@@ -81,27 +83,31 @@
 
                 <footer>
                     <p>23 keer leuk gevonden</p>
-                    <a href="/Projectweb/inlogscherm.html"> <img id="heart" src="/Projectweb/Assets/hearticon.png" alt="hearticon"></a>
-                    <a href="/Projectweb/inlogscherm.html"> <img id="add" src="/Projectweb/Assets/plusicon.png" alt="addicon"></a>
+                    <a href="
+            inlogscherm.html"> <img id="heart" src="Assets/hearticon.png" alt="hearticon"></a>
+                    <a href="inlogscherm.html"> <img id="add" src="Assets/plusicon.png" alt="addicon"></a>
 
                 </footer>
 
-                <a href="/Projectweb/artikelalzheimer.html" id="leesverder">Lees verder ></a>
+                <a href="artikelalzheimer.html" id="leesverder">Lees verder ></a>
 
             </article>
             <article>
-                <h3>Alzheimer</h3>
+                <h3>Vergezocht</h3>
                 <p>Ik stap uit, euh… Hoe heet het? Zo’n vervoersdinges op wielen. Van de gemeente. Wit met blauw. Kom. Lijn 12. Of was het 21? Ik weet het niet. Ik stap uit en loop achter een wagentje aan. Van wie is dat wagentje? Ik weet het niet. Ik kijk in het wagentje. Er ligt een ventje...</p>
 
 
                 <footer>
                     <p>44 keer leuk gevonden</p>
-                    <a href="/Projectweb/inlogscherm.html"> <img id="heart" src="/Projectweb/Assets/hearticon.png" alt="hearticon"></a>
-                    <a href="/Projectweb/inlogscherm.html"> <img id="add" src="/Projectweb/Assets/plusicon.png" alt="addicon"></a>
+                    <a href="
+                    inlogscherm.html"> <img id="heart" src="Assets/hearticon.png" alt="hearticon"></a>
+                    <a href="inlogscherm.html"> <img id="add" src="Assets/plusicon.png" alt="addicon"></a>
 
                 </footer>
 
-                <a href="/Projectweb/artikelalzheimer.html" id="leesverder">Lees verder ></a>
+                <a href="artikelalzheimer.html" id="leesverder">Lees verder ></a>
+
+
 
             </article>
             <article>
@@ -110,14 +116,13 @@
 
                 <footer>
                     <p>12 keer leuk gevonden</p>
-                    <a href="/Projectweb/inlogscherm.html"> <img id="heart" src="/Projectweb/Assets/hearticon.png" alt="hearticon"></a>
-
-                    <a href="/Projectweb/inlogscherm.html"> <img id="add" src="/Projectweb/Assets/plusicon.png" alt="addicon"></a>
+                    <a href="
+                    inlogscherm.html"> <img id="heart" src="Assets/hearticon.png" alt="hearticon"></a>
+                    <a href="inlogscherm.html"> <img id="add" src="Assets/plusicon.png" alt="addicon"></a>
 
                 </footer>
 
-                <a href="/Projectweb/artikelblind.html" id="leesverder">Lees verder ></a>
-
+                <a href="artikelblind.html" id="leesverder">Lees verder ></a>
 
             </article>
             <article>
@@ -125,13 +130,77 @@
                 <p>Kijk, daar gaat Max. Dag Max! Hij stapt uit de bus. Wat duwt hij daar vooruit? Jawel, een heuse kinderwagen! En wat voor één! Een groene! Zijn zoontje ligt er in te slapen. Die heeft gelukkig geen last van de kou. Want het is koud joh! Het regent een beetje en het waait flink. Alle...</p>
 
                 <footer>
-                    <p> 3 keer leuk gevonden</p>
-                    <a href="/Projectweb/inlogscherm.html"> <img id="heart" src="/Projectweb/Assets/hearticon.png" alt="hearticon"></a>
-                    <a href="/Projectweb/inlogscherm.html"> <img id="add" src="/Projectweb/Assets/plusicon.png" alt="addicon"></a>
+                    <p>3 keer leuk gevonden</p>
+                    <a href="
+                    inlogscherm.html"> <img id="heart" src="Assets/hearticon.png" alt="hearticon"></a>
+                    <a href="inlogscherm.html"> <img id="add" src="Assets/plusicon.png" alt="addicon"></a>
 
                 </footer>
 
-                <a href="/Projectweb/artikelkinderboek.html" id="leesverder">Lees verder ></a>
+                <a href="artikelkinderboek.html" id="leesverder">Lees verder ></a>
+            </article>
+            <article>
+                <h3>Verrassing</h3>
+                <p>- ‘Biertje dan maar?’ – ‘Graag.’ – ‘Vermoeiende dag?’ – ‘Nah. Naar de bilbiotheek geweest. Met de bus.’ – ‘Gaat daar een bus naartoe?’ – ‘De bus stopt op het stationsplein.’ – ‘Ah. En vandaar moet je lopen?’ – ‘Ja, ik was met mijn zoon. Die sliep in zijn kinderwagen.’ – ‘Goed zo. Lekker wandelweer?’</p>
+
+
+                <footer>
+                    <p>11 keer leuk gevonden</p>
+                    <a href="
+            inlogscherm.html"> <img id="heart" src="Assets/hearticon.png" alt="hearticon"></a>
+                    <a href="inlogscherm.html"> <img id="add" src="Assets/plusicon.png" alt="addicon"></a>
+
+                </footer>
+
+                <a href="artikelalzheimer.html" id="leesverder">Lees verder ></a>
+
+            </article>
+            <article>
+                <h3>Beroemd</h3>
+                <p>Vlak voordat ik de bus uitstap bedank ik de buschauffeur via de spiegel voor zijn diensten. Hij zwaait joviaal terug. ‘Mijn vrouw is een groot fan van u’, roept hij. ‘Doe haar de groeten’, zeg ik en stap uit. Centraal Station. Ik duw mijn zoon voort. Hij slaapt. Zich onbewust van de last die er...</p>
+
+
+                <footer>
+                    <p>54 keer leuk gevonden</p>
+                    <a href="
+                    inlogscherm.html"> <img id="heart" src="Assets/hearticon.png" alt="hearticon"></a>
+                    <a href="inlogscherm.html"> <img id="add" src="Assets/plusicon.png" alt="addicon"></a>
+
+                </footer>
+
+                <a href="artikelalzheimer.html" id="leesverder">Lees verder ></a>
+
+
+
+            </article>
+            <article>
+                <h3>Steenkolenfrans</h3>
+                <p>Le premier fevrièr 2011. Presque midi. Le bus s’arrête. Ligne 21. Place de Gare Centrale. Je marche au derrière d’un poussette. Mon fils dort. Je suis en route au Bibliothèque Public pour emprunteur Exercices de Style de Raymond Queneau. C’est un livre très dificile d’acquérir. Mais zut alors, quelle ravage ici! Il y a beaucoup</p>
+
+                <footer>
+                    <p>19 keer leuk gevonden</p>
+                    <a href="
+                    inlogscherm.html"> <img id="heart" src="Assets/hearticon.png" alt="hearticon"></a>
+                    <a href="inlogscherm.html"> <img id="add" src="Assets/plusicon.png" alt="addicon"></a>
+
+                </footer>
+
+                <a href="artikelalzheimer.html" id="leesverder">Lees verder ></a>
+
+            </article>
+            <article>
+                <h3>Het gebrek</h3>
+                <p>De bus uit. Mijn zoon tukt in zijn kinderkoets. Eindelijk. Ik loop over het plein. Een gierende wind en een striemende miezerregen geselen mijn gezicht. De mensen kijken voor zich uit, ieder voor zich. Ik ben op weg richting de bibliotheek om Stijloefeningen te lenen van hoe heet die schijver, iets met een Q. Welk ...</p>
+
+                <footer>
+                    <p>2 keer leuk gevonden</p>
+                    <a href="
+                    inlogscherm.html"> <img id="heart" src="Assets/hearticon.png" alt="hearticon"></a>
+                    <a href="inlogscherm.html"> <img id="add" src="Assets/plusicon.png" alt="addicon"></a>
+
+                </footer>
+
+                <a href="artikelalzheimer.html" id="leesverder">Lees verder ></a>
             </article>
         </section>
     </main>
