--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
                 </li>
 
                 <li>
-                    <label for="searching"> <img id="search" src="Assets/searchicon.png" alt="searchbutton"></label>
+                    <label for="searching"> <img id="search" src="Assets/searchicon.png" alt="searchbutton">
+                    </label>
                 </li>
 
 
@@ -38,7 +39,7 @@
 
             <form action="/">
                 <input type="text" id="searching">
-                <button>Ga!</button>
+                <button>Ga ></button>
             </form>
         </nav>
     </header>
