--- a/artikelalzheimer.html
+++ b/artikelalzheimer.html
@@ -42,7 +42,7 @@
 
     <main>
 
-        <img id="alzheimerverhaal" src="Assets/Alzheimerverhaal.jpg" alt="alzheimerverhaal">
+        <img id="alzheimerverhaal" src="Assets/newalzheimer-09.jpg" alt="alzheimerverhaal">
     </main>
 </body>
 </html>
