--- a/artikelalzheimer.html
+++ b/artikelalzheimer.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/main.css" rel="stylesheet">
+    <link href="css/artikel.css" rel="stylesheet">
     <link href="css/header.css" rel="stylesheet">
     <title>Verhalen voor onderweg</title>
 </head>
@@ -41,8 +41,9 @@
     </header>
 
     <main>
-
-        <img id="alzheimerverhaal" src="Assets/newalzheimer-09.jpg" alt="alzheimerverhaal">
+        <section id="alzheimerverhaal">
+            <p>yo</p>
+        </section>
     </main>
 </body>
 </html>
