--- a/artikelkinderboek.html
+++ b/artikelkinderboek.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/main.css" rel="stylesheet">
     <link href="css/header.css" rel="stylesheet">
+    <link href="css/artikel.css" rel="stylesheet">
+
     <title>Verhalen voor onderweg</title>
 </head>
 
@@ -43,10 +44,8 @@
         </nav>
     </header>
 
-    <main>
+    <main id="kinderboek">
 
-
-        <img id="kinderboekverhaal" src="Assets/Kinderboekverhaal.jpg" alt="kinderboekverhaal">
     </main>
 </body>
 </html>
