--- a/artikelalzheimer.html
+++ b/artikelalzheimer.html
@@ -40,10 +40,11 @@
         </nav>
     </header>
 
-    <main>
-        <section id="alzheimerverhaal">
-            <p>yo</p>
-        </section>
+    <main id="alzheimer">
+
+
+
     </main>
 </body>
+
 </html>
