--- a/artikelblind.html
+++ b/artikelblind.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/main.css" rel="stylesheet">
+    <link href="css/artikel.css" rel="stylesheet">
     <link href="css/header.css" rel="stylesheet">
     <title>Verhalen voor onderweg</title>
 </head>
@@ -43,10 +43,7 @@
         </nav>
     </header>
 
-    <main>
-
-
-        <img id="blindverhaal" src="Assets/verschillende-02.jpg" alt="blindverhaal">
+    <main id="blind">
     </main>
 </body>
 
