--- a/artikelalzheimer.html
+++ b/artikelalzheimer.html
@@ -25,15 +25,18 @@
                 </li>
 
                 <li>
-                    <a href=""> <img id="search" src="Assets/searchicon.png" alt="searchbutton"></a>
+                    <label for="searching"> <img id="search" src="Assets/searchicon.png" alt="searchbutton"></label>
                 </li>
+
+
             </ul>
 
+
             <a href="index.html">
-                <h1>Verhalen website</h1>
+                <h1>NS Verhalen voor onderweg</h1>
             </a>
+
             <form action="/">
-                <label for="searching">Zoeken</label>
                 <input type="text" id="searching">
                 <button>Ga!</button>
             </form>
@@ -42,9 +45,20 @@
 
     <main id="alzheimer">
 
-
-
     </main>
+    <section>
+        <p>
+            Vond je het een goed verhaal? Geef dit verhaal dan een hartje!
+        </p>
+        <a href="index.html" id="meerlezen"> Meer lezen?  ></a>
+
+        <footer>
+            <p>23 keer leuk gevonden</p>
+            <a href="inlogscherm.html"> <img id="heart" src="Assets/hearticon.png" alt="hearticon"></a>
+            <a href="inlogscherm.html"> <img id="add" src="Assets/plusicon.png" alt="addicon"></a>
+
+        </footer>
+    </section>
 </body>
 
 </html>
