--- a/profiel.html
+++ b/profiel.html
@@ -4,18 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="css/main.css" rel="stylesheet">
     <link href="css/header.css" rel="stylesheet">
-    <link href="css/artikel.css" rel="stylesheet">
-
-    <title>Verhalen voor onderweg</title>
+    <link href="css/signup.css" rel="stylesheet">
+    <title>Inlogscherm</title>
 </head>
-
-<!-- body -->
 
 <body>
 
     <header>
-
         <nav>
 
             <ul id="search">
@@ -43,23 +40,3 @@
             </form>
         </nav>
     </header>
-    <main id="kinderboek">
-
-    </main>
-    <section>
-        <p>
-            Vond je het een goed verhaal? Geef dit verhaal dan een hartje!
-        </p>
-        <a href="index.html" id="meerlezen"> Meer lezen?  ></a>
-
-        <footer>
-            <p>3 keer leuk gevonden</p>
-            <a href="inlogscherm.html"> <img id="heart" src="Assets/hearticon.png" alt="hearticon"></a>
-            <a href="inlogscherm.html"> <img id="add" src="Assets/plusicon.png" alt="addicon"></a>
-
-        </footer>
-    </section>
-
-</body>
-
-</html>
