--- a/artikelblind.html
+++ b/artikelblind.html
@@ -25,7 +25,7 @@
                 </li>
 
                 <li>
-                    <a href=""> <img id="search" src="Assets/searchicon.png" alt="searchbutton"></a>
+                    <label for="searching"> <img id="search" src="Assets/searchicon.png" alt="searchbutton"></label>
                 </li>
 
 
@@ -33,10 +33,10 @@
 
 
             <a href="index.html">
-                <h1>Verhalen website</h1>
+                <h1>NS Verhalen voor onderweg</h1>
             </a>
+
             <form action="/">
-                <label for="searching">Zoeken</label>
                 <input type="text" id="searching">
                 <button>Ga!</button>
             </form>
@@ -44,7 +44,21 @@
     </header>
 
     <main id="blind">
+
     </main>
+    <section>
+        <p>
+            Vond je het een goed verhaal? Geef dit verhaal dan een hartje!
+        </p>
+        <a href="index.html" id="meerlezen"> Meer lezen?  ></a>
+
+        <footer>
+            <p>12 keer leuk gevonden</p>
+            <a href="inlogscherm.html"> <img id="heart" src="Assets/hearticon.png" alt="hearticon"></a>
+            <a href="inlogscherm.html"> <img id="add" src="Assets/plusicon.png" alt="addicon"></a>
+
+        </footer>
+    </section>
 </body>
 
 </html>
