--- a/minstelikes.html
+++ b/minstelikes.html
@@ -17,32 +17,36 @@
 
         <nav>
 
-            <ul id="search">
+            <ul id="navigation">
 
                 <li>
                     <a href="inlogscherm.html"> <img id="profile" src="Assets/gebruikericon.png" alt="profilebutton">
                     </a>
                 </li>
+                <li>
+                    <a href="inlogscherm.html"> <img class="boek" id="profile" src="Assets/80719-200.png" alt="profilebutton">
+                    </a>
+                </li>
 
                 <li>
-                    <label for="searching"> <img id="search" src="Assets/searchicon.png" alt="searchbutton"></label>
+                    <label for="searching"> <img id="search" src="Assets/searchicon.png" alt="searchbutton">
+                    </label>
                 </li>
 
 
             </ul>
-
 
             <a href="index.html">
                 <h1>NS Verhalen voor onderweg</h1>
             </a>
 
             <form action="/">
-                <input type="text" id="searching">
-                <button>Ga!</button>
+                <input type="text" id="searchbar">
+                <button>Ga ></button>
             </form>
         </nav>
     </header>
-    <img id="reading" src="Assets/grandma2.png">
+    <img src="Assets/grandma2.png">
     <main>
 
         <nav>
@@ -82,13 +86,13 @@
 
                 <footer>
                     <p>2 keer leuk gevonden</p>
-                    <a href="
-                    inlogscherm.html"> <img id="heart" src="Assets/hearticon.png" alt="hearticon"></a>
-                    <a href="inlogscherm.html"> <img id="add" src="Assets/plusicon.png" alt="addicon"></a>
+                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="add" src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
 
                 <a href="artikelalzheimer.html" id="leesverder">Lees verder ></a>
+
             </article>
             <article>
                 <h3>Kinderboek</h3>
@@ -96,12 +100,10 @@
 
                 <footer>
                     <p>3 keer leuk gevonden</p>
-                    <a href="
-                    inlogscherm.html"> <img id="heart" src="Assets/hearticon.png" alt="hearticon"></a>
-                    <a href="inlogscherm.html"> <img id="add" src="Assets/plusicon.png" alt="addicon"></a>
+                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="add" src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
-
 
                 <a href="artikelkinderboek.html" id="leesverder">Lees verder ></a>
             </article>
@@ -112,9 +114,8 @@
 
                 <footer>
                     <p>11 keer leuk gevonden</p>
-                    <a href="
-            inlogscherm.html"> <img id="heart" src="Assets/hearticon.png" alt="hearticon"></a>
-                    <a href="inlogscherm.html"> <img id="add" src="Assets/plusicon.png" alt="addicon"></a>
+                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="add" src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
 
@@ -127,9 +128,8 @@
 
                 <footer>
                     <p>12 keer leuk gevonden</p>
-                    <a href="
-                    inlogscherm.html"> <img id="heart" src="Assets/hearticon.png" alt="hearticon"></a>
-                    <a href="inlogscherm.html"> <img id="add" src="Assets/plusicon.png" alt="addicon"></a>
+                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="add" src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
 
@@ -142,9 +142,8 @@
 
                 <footer>
                     <p>19 keer leuk gevonden</p>
-                    <a href="
-                    inlogscherm.html"> <img id="heart" src="Assets/hearticon.png" alt="hearticon"></a>
-                    <a href="inlogscherm.html"> <img id="add" src="Assets/plusicon.png" alt="addicon"></a>
+                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="add" src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
 
@@ -175,9 +174,8 @@
 
                 <footer>
                     <p>44 keer leuk gevonden</p>
-                    <a href="
-                    inlogscherm.html"> <img id="heart" src="Assets/hearticon.png" alt="hearticon"></a>
-                    <a href="inlogscherm.html"> <img id="add" src="Assets/plusicon.png" alt="addicon"></a>
+                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="add" src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
 
