--- a/index.html
+++ b/index.html
@@ -17,10 +17,14 @@
 
         <nav>
 
-            <ul id="search">
+            <ul id="navigation">
 
                 <li>
                     <a href="inlogscherm.html"> <img id="profile" src="Assets/gebruikericon.png" alt="profilebutton">
+                    </a>
+                </li>
+                <li>
+                    <a href="inlogscherm.html"> <img class="boek" id="profile" src="Assets/80719-200.png" alt="profilebutton">
                     </a>
                 </li>
 
@@ -37,12 +41,12 @@
             </a>
 
             <form action="/">
-                <input type="text" id="searching">
+                <input type="text" id="searchbar">
                 <button>Ga ></button>
             </form>
         </nav>
     </header>
-    <img id="reading" src="Assets/grandma2.png">
+    <img src="Assets/grandma2.png">
     <main>
 
         <nav>
@@ -83,9 +87,10 @@
 
                 <footer>
                     <p>23 keer leuk gevonden</p>
-                    <a href="
-            inlogscherm.html"> <img id="heart" src="Assets/hearticon.png" alt="hearticon"></a>
-                    <a href="inlogscherm.html"> <img id="add" src="Assets/plusicon.png" alt="addicon"></a>
+                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
+
+                    <img class="add" src="Assets/plusicon.png" alt="addicon">
+
 
                 </footer>
 
@@ -99,13 +104,13 @@
 
                 <footer>
                     <p>44 keer leuk gevonden</p>
-                    <a href="
-                    inlogscherm.html"> <img id="heart" src="Assets/hearticon.png" alt="hearticon"></a>
-                    <a href="inlogscherm.html"> <img id="add" src="Assets/plusicon.png" alt="addicon"></a>
+                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="add" src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
 
                 <a href="artikelalzheimer.html" id="leesverder">Lees verder ></a>
+
 
 
 
@@ -116,9 +121,8 @@
 
                 <footer>
                     <p>12 keer leuk gevonden</p>
-                    <a href="
-                    inlogscherm.html"> <img id="heart" src="Assets/hearticon.png" alt="hearticon"></a>
-                    <a href="inlogscherm.html"> <img id="add" src="Assets/plusicon.png" alt="addicon"></a>
+                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="add" src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
 
@@ -131,9 +135,8 @@
 
                 <footer>
                     <p>3 keer leuk gevonden</p>
-                    <a href="
-                    inlogscherm.html"> <img id="heart" src="Assets/hearticon.png" alt="hearticon"></a>
-                    <a href="inlogscherm.html"> <img id="add" src="Assets/plusicon.png" alt="addicon"></a>
+                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="add" src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
 
@@ -146,9 +149,8 @@
 
                 <footer>
                     <p>11 keer leuk gevonden</p>
-                    <a href="
-            inlogscherm.html"> <img id="heart" src="Assets/hearticon.png" alt="hearticon"></a>
-                    <a href="inlogscherm.html"> <img id="add" src="Assets/plusicon.png" alt="addicon"></a>
+                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="add" src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
 
@@ -162,9 +164,8 @@
 
                 <footer>
                     <p>54 keer leuk gevonden</p>
-                    <a href="
-                    inlogscherm.html"> <img id="heart" src="Assets/hearticon.png" alt="hearticon"></a>
-                    <a href="inlogscherm.html"> <img id="add" src="Assets/plusicon.png" alt="addicon"></a>
+                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="add" src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
 
@@ -179,9 +180,8 @@
 
                 <footer>
                     <p>19 keer leuk gevonden</p>
-                    <a href="
-                    inlogscherm.html"> <img id="heart" src="Assets/hearticon.png" alt="hearticon"></a>
-                    <a href="inlogscherm.html"> <img id="add" src="Assets/plusicon.png" alt="addicon"></a>
+                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="add" src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
 
@@ -194,9 +194,8 @@
 
                 <footer>
                     <p>2 keer leuk gevonden</p>
-                    <a href="
-                    inlogscherm.html"> <img id="heart" src="Assets/hearticon.png" alt="hearticon"></a>
-                    <a href="inlogscherm.html"> <img id="add" src="Assets/plusicon.png" alt="addicon"></a>
+                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="add" src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
 
@@ -204,6 +203,7 @@
             </article>
         </section>
     </main>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
