--- a/meestelikes.html
+++ b/meestelikes.html
@@ -17,32 +17,36 @@
 
         <nav>
 
-            <ul id="search">
+            <ul id="navigation">
 
                 <li>
                     <a href="inlogscherm.html"> <img id="profile" src="Assets/gebruikericon.png" alt="profilebutton">
                     </a>
                 </li>
+                <li>
+                    <a href="inlogscherm.html"> <img class="boek" id="profile" src="Assets/80719-200.png" alt="profilebutton">
+                    </a>
+                </li>
 
                 <li>
-                    <label for="searching"> <img id="search" src="Assets/searchicon.png" alt="searchbutton"></label>
+                    <label for="searching"> <img id="search" src="Assets/searchicon.png" alt="searchbutton">
+                    </label>
                 </li>
 
 
             </ul>
-
 
             <a href="index.html">
                 <h1>NS Verhalen voor onderweg</h1>
             </a>
 
             <form action="/">
-                <input type="text" id="searching">
-                <button>Ga!</button>
+                <input type="text" id="searchbar">
+                <button>Ga ></button>
             </form>
         </nav>
     </header>
-    <img id="reading" src="Assets/grandma2.png">
+    <img src="Assets/grandma2.png">
     <main>
 
         <nav>
@@ -83,15 +87,12 @@
 
                 <footer>
                     <p>54 keer leuk gevonden</p>
-                    <a href="
-                    inlogscherm.html"> <img id="heart" src="Assets/hearticon.png" alt="hearticon"></a>
-                    <a href="inlogscherm.html"> <img id="add" src="Assets/plusicon.png" alt="addicon"></a>
+                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="add" src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
 
                 <a href="artikelalzheimer.html" id="leesverder">Lees verder ></a>
-
-
 
             </article>
             <article>
@@ -101,17 +102,15 @@
 
                 <footer>
                     <p>44 keer leuk gevonden</p>
-                    <a href="
-                    inlogscherm.html"> <img id="heart" src="Assets/hearticon.png" alt="hearticon"></a>
-                    <a href="inlogscherm.html"> <img id="add" src="Assets/plusicon.png" alt="addicon"></a>
+                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="add" src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
 
                 <a href="artikelalzheimer.html" id="leesverder">Lees verder ></a>
 
-
-
             </article>
+
             <article>
                 <h3>Alzheimer</h3>
                 <p>Ik stap uit, euh… Hoe heet het? Zo’n vervoersdinges op wielen. Van de gemeente. Wit met blauw. Kom. Lijn 12. Of was het 21? Ik weet het niet. Ik stap uit en loop achter een wagentje aan. Van wie is dat wagentje? Ik weet het niet. Ik kijk in het wagentje. Er ligt een ventje...</p>
@@ -119,9 +118,10 @@
 
                 <footer>
                     <p>23 keer leuk gevonden</p>
-                    <a href="
-            inlogscherm.html"> <img id="heart" src="Assets/hearticon.png" alt="hearticon"></a>
-                    <a href="inlogscherm.html"> <img id="add" src="Assets/plusicon.png" alt="addicon"></a>
+                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
+
+                    <img class="add" src="Assets/plusicon.png" alt="addicon">
+
 
                 </footer>
 
@@ -134,9 +134,8 @@
 
                 <footer>
                     <p>19 keer leuk gevonden</p>
-                    <a href="
-                    inlogscherm.html"> <img id="heart" src="Assets/hearticon.png" alt="hearticon"></a>
-                    <a href="inlogscherm.html"> <img id="add" src="Assets/plusicon.png" alt="addicon"></a>
+                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="add" src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
 
@@ -149,9 +148,8 @@
 
                 <footer>
                     <p>12 keer leuk gevonden</p>
-                    <a href="
-                    inlogscherm.html"> <img id="heart" src="Assets/hearticon.png" alt="hearticon"></a>
-                    <a href="inlogscherm.html"> <img id="add" src="Assets/plusicon.png" alt="addicon"></a>
+                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="add" src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
 
@@ -165,9 +163,8 @@
 
                 <footer>
                     <p>11 keer leuk gevonden</p>
-                    <a href="
-            inlogscherm.html"> <img id="heart" src="Assets/hearticon.png" alt="hearticon"></a>
-                    <a href="inlogscherm.html"> <img id="add" src="Assets/plusicon.png" alt="addicon"></a>
+                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="add" src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
 
@@ -180,12 +177,10 @@
 
                 <footer>
                     <p>3 keer leuk gevonden</p>
-                    <a href="
-                    inlogscherm.html"> <img id="heart" src="Assets/hearticon.png" alt="hearticon"></a>
-                    <a href="inlogscherm.html"> <img id="add" src="Assets/plusicon.png" alt="addicon"></a>
+                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="add" src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
-
 
                 <a href="artikelkinderboek.html" id="leesverder">Lees verder ></a>
             </article>
@@ -197,9 +192,8 @@
 
                 <footer>
                     <p>2 keer leuk gevonden</p>
-                    <a href="
-                    inlogscherm.html"> <img id="heart" src="Assets/hearticon.png" alt="hearticon"></a>
-                    <a href="inlogscherm.html"> <img id="add" src="Assets/plusicon.png" alt="addicon"></a>
+                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="add" src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
 
