--- a/suggesties.html
+++ b/suggesties.html
@@ -17,32 +17,36 @@
 
         <nav>
 
-            <ul id="search">
+            <ul id="navigation">
 
                 <li>
                     <a href="inlogscherm.html"> <img id="profile" src="Assets/gebruikericon.png" alt="profilebutton">
                     </a>
                 </li>
+                <li>
+                    <a href="inlogscherm.html"> <img class="boek" id="profile" src="Assets/80719-200.png" alt="profilebutton">
+                    </a>
+                </li>
 
                 <li>
-                    <label for="searching"> <img id="search" src="Assets/searchicon.png" alt="searchbutton"></label>
+                    <label for="searching"> <img id="search" src="Assets/searchicon.png" alt="searchbutton">
+                    </label>
                 </li>
 
 
             </ul>
-
 
             <a href="index.html">
                 <h1>NS Verhalen voor onderweg</h1>
             </a>
 
             <form action="/">
-                <input type="text" id="searching">
-                <button>Ga!</button>
+                <input type="text" id="searchbar">
+                <button>Ga ></button>
             </form>
         </nav>
     </header>
-    <img id="reading" src="Assets/grandma2.png">
+    <img src="Assets/grandma2.png">
     <main>
 
         <nav>
@@ -64,7 +68,7 @@
         </nav>
 
 
-        <a href="#submenu">Sorteren > </a>
+        <a href="#submenu">Sorteren ></a>
 
         <ul id="submenu">
 
@@ -74,7 +78,6 @@
             <li><a href="">Minste aantal woorden</a></li>
 
         </ul>
-
         <section>
             <article>
                 <h3>Verrassing</h3>
@@ -83,9 +86,10 @@
 
                 <footer>
                     <p>11 keer leuk gevonden</p>
-                    <a href="
-            inlogscherm.html"> <img id="heart" src="Assets/hearticon.png" alt="hearticon"></a>
-                    <a href="inlogscherm.html"> <img id="add" src="Assets/plusicon.png" alt="addicon"></a>
+                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
+
+                    <img class="add" src="Assets/plusicon.png" alt="addicon">
+
 
                 </footer>
 
@@ -96,18 +100,16 @@
                 <h3>Beroemd</h3>
                 <p>Vlak voordat ik de bus uitstap bedank ik de buschauffeur via de spiegel voor zijn diensten. Hij zwaait joviaal terug. ‘Mijn vrouw is een groot fan van u’, roept hij. ‘Doe haar de groeten’, zeg ik en stap uit. Centraal Station. Ik duw mijn zoon voort. Hij slaapt. Zich onbewust van de last die er...</p>
 
-
                 <footer>
                     <p>54 keer leuk gevonden</p>
-                    <a href="
-                    inlogscherm.html"> <img id="heart" src="Assets/hearticon.png" alt="hearticon"></a>
-                    <a href="inlogscherm.html"> <img id="add" src="Assets/plusicon.png" alt="addicon"></a>
+                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
+
+                    <img class="add" src="Assets/plusicon.png" alt="addicon">
+
 
                 </footer>
 
                 <a href="artikelalzheimer.html" id="leesverder">Lees verder ></a>
-
-
 
             </article>
             <article>
@@ -116,9 +118,10 @@
 
                 <footer>
                     <p>19 keer leuk gevonden</p>
-                    <a href="
-                    inlogscherm.html"> <img id="heart" src="Assets/hearticon.png" alt="hearticon"></a>
-                    <a href="inlogscherm.html"> <img id="add" src="Assets/plusicon.png" alt="addicon"></a>
+                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
+
+                    <img class="add" src="Assets/plusicon.png" alt="addicon">
+
 
                 </footer>
 
@@ -131,13 +134,15 @@
 
                 <footer>
                     <p>2 keer leuk gevonden</p>
-                    <a href="
-                    inlogscherm.html"> <img id="heart" src="Assets/hearticon.png" alt="hearticon"></a>
-                    <a href="inlogscherm.html"> <img id="add" src="Assets/plusicon.png" alt="addicon"></a>
+                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
+
+                    <img class="add" src="Assets/plusicon.png" alt="addicon">
+
 
                 </footer>
 
                 <a href="artikelalzheimer.html" id="leesverder">Lees verder ></a>
+
             </article>
         </section>
     </main>
