--- a/profiel.html
+++ b/profiel.html
@@ -6,37 +6,98 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/main.css" rel="stylesheet">
     <link href="css/header.css" rel="stylesheet">
-    <link href="css/signup.css" rel="stylesheet">
-    <title>Inlogscherm</title>
+    <title>Verhalen voor onderweg</title>
 </head>
+
+<!-- body -->
 
 <body>
 
     <header>
+
         <nav>
 
-            <ul id="search">
+            <ul id="navigation">
 
                 <li>
                     <a href="inlogscherm.html"> <img id="profile" src="Assets/gebruikericon.png" alt="profilebutton">
                     </a>
                 </li>
+                <li>
+                    <a href="inlogscherm.html"> <img class="boek" id="profile" src="Assets/melding.jpg" alt="profilebutton">
+                    </a>
+                </li>
 
                 <li>
-                    <label for="searching"> <img id="search" src="Assets/searchicon.png" alt="searchbutton"></label>
+
+                    <label for="searching"> <img id="search" src="Assets/searchicon.png" alt="searchbutton">
+                    </label>
                 </li>
 
 
             </ul>
-
 
             <a href="index.html">
                 <h1>NS Verhalen voor onderweg</h1>
             </a>
 
             <form action="/">
-                <input type="text" id="searching">
-                <button>Ga!</button>
+                <input type="text" id="searchbar">
+                <button>Ga ></button>
             </form>
         </nav>
     </header>
+    <img src="Assets/grandma2.png">
+    <main>
+        <h1>Eigen verhalen lijst</h1>
+
+        <section>
+            <article>
+                <h2>Alzheimer</h2>
+                <p>Ik stap uit, euh… Hoe heet het? Zo’n vervoersdinges op wielen. Van de gemeente. Wit met blauw. Kom. Lijn 12. Of was het 21? Ik weet het niet. Ik stap uit en loop achter een wagentje aan. Van wie is dat wagentje? Ik weet het niet. Ik kijk in het wagentje. Er ligt een ventje...</p>
+
+
+                <footer>
+                    <p>23 keer leuk gevonden</p>
+                    <img id="heart" src="Assets/hearticonred.png" alt="hearticon">
+
+                    <img class="add" src="Assets/download.png" alt="downloadicon">
+
+                </footer>
+
+                <a href="artikelalzheimer.html" id="leesverder">Lees verder ></a>
+
+            </article>
+            <article>
+                <h2>Vergezocht</h2>
+                <p>Ik stap uit, euh… Hoe heet het? Zo’n vervoersdinges op wielen. Van de gemeente. Wit met blauw. Kom. Lijn 12. Of was het 21? Ik weet het niet. Ik stap uit en loop achter een wagentje aan. Van wie is dat wagentje? Ik weet het niet. Ik kijk in het wagentje. Er ligt een ventje...</p>
+
+
+                <footer>
+                    <p>44 keer leuk gevonden</p>
+                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
+                    <img class="add" src="Assets/download.png" alt="downloadicon">
+
+                </footer>
+
+                <a href="artikelalzheimer.html" id="leesverder">Lees verder ></a>
+
+            </article>
+            <article>
+                <h2>Blind</h2>
+                <p>Piepende remmen, bus 21 komt tot stilstand. De stem van de buschauffeur, naar mij gericht, zakelijk, niet vriendelijk, niet onvriendelijk: ‘Centraal Station, eindhalte’. Het sissende geluid van busdeuren die open gaan. Mensen drommen naar buiten. Voorzichtig vind ik mijn weg naar de uitgang en stap uit.</p>
+
+                <footer>
+                    <p>12 keer leuk gevonden</p>
+                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
+                    <img class="add" src="Assets/download.png" alt="downloadicon">
+
+                </footer>
+
+                <a href="artikelblind.html" id="leesverder">Lees verder ></a>
+
+            </article>
+    </main>
+</body>
+
+</html>
