--- a/inlogscherm.html
+++ b/inlogscherm.html
@@ -69,7 +69,7 @@
                 <p class="feedback">Alles is goed ingevuld!</p>
 
                 <a href="https://nl-nl.facebook.com/" id="facebook">Login met Facebook ></a>
-                <a href="index.html" id="aanmelden">Aanmelden ></a>
+                <a href="profiel.html" id="aanmelden">Aanmelden ></a>
             </fieldset>
         </form>
     </main>
