--- a/artikelalzheimer.html
+++ b/artikelalzheimer.html
@@ -23,11 +23,16 @@
                     <a href="inlogscherm.html"> <img id="profile" src="Assets/gebruikericon.png" alt="profilebutton">
                     </a>
                 </li>
-
                 <li>
-                    <label for="searching"> <img id="search" src="Assets/searchicon.png" alt="searchbutton"></label>
+                    <a href="inlogscherm.html"> <img class="boek" id="profile" src="Assets/melding.jpg" alt="profilebutton">
+                    </a>
                 </li>
 
+                <li>
+
+                    <label for="searching"> <img id="search" src="Assets/searchicon.png" alt="searchbutton">
+                    </label>
+                </li>
 
             </ul>
 
@@ -37,8 +42,8 @@
             </a>
 
             <form action="/">
-                <input type="text" id="searching">
-                <button>Ga!</button>
+                <input type="text" id="searching" alt="searchbar">
+                <button>Ga ></button>
             </form>
         </nav>
     </header>
