--- a/artikelblind.html
+++ b/artikelblind.html
@@ -25,20 +25,25 @@
                 </li>
 
                 <li>
-                    <label for="searching"> <img id="search" src="Assets/searchicon.png" alt="searchbutton"></label>
+                    <a href="inlogscherm.html"> <img class="boek" id="profile" src="Assets/melding.jpg" alt="profilebutton">
+                    </a>
                 </li>
 
+                <li>
+
+                    <label for="searching"> <img id="search" src="Assets/searchicon.png" alt="searchbutton">
+                    </label>
+                </li>
 
             </ul>
-
 
             <a href="index.html">
                 <h1>NS Verhalen voor onderweg</h1>
             </a>
 
             <form action="/">
-                <input type="text" id="searching">
-                <button>Ga!</button>
+                <input type="text" id="searching" alt="searchbar">
+                <button>Ga ></button>
             </form>
         </nav>
     </header>
