--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
                     </label>
                 </li>
 
-
             </ul>
 
             <a href="index.html">
@@ -63,7 +62,7 @@
             </ul>
             <ul id="vrienden">
                 <li>
-                    <a href="">Mijn vrienden</a>
+<a href="vrienden.html">Mijn vrienden</a>
                 </li>
             </ul>
         </nav>
