--- a/meestelikes.html
+++ b/meestelikes.html
@@ -24,15 +24,15 @@
                     </a>
                 </li>
                 <li>
-                    <a href="inlogscherm.html"> <img class="boek" id="profile" src="Assets/80719-200.png" alt="profilebutton">
+                    <a href="inlogscherm.html"> <img class="boek" id="profile" src="Assets/melding.jpg" alt="profilebutton">
                     </a>
                 </li>
 
                 <li>
+
                     <label for="searching"> <img id="search" src="Assets/searchicon.png" alt="searchbutton">
                     </label>
                 </li>
-
 
             </ul>
 
