--- a/suggesties.html
+++ b/suggesties.html
@@ -24,7 +24,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="inlogscherm.html"> <img class="boek" id="profile" src="Assets/80719-200.png" alt="profilebutton">
+                    <a href="inlogscherm.html"> <img class="boek" id="profile" src="Assets/melding.jpg" alt="profilebutton">
                     </a>
                 </li>
 
@@ -41,8 +41,9 @@
             </a>
 
             <form action="/">
-                <input type="text" id="searchbar">
+                <input type="text" id="searching" alt="searchbar">
                 <button>Ga ></button>
+
             </form>
         </nav>
     </header>
