--- a/vrienden.html
+++ b/vrienden.html
@@ -63,7 +63,7 @@
             </ul>
             <ul id="vrienden">
                 <li>
-                    <a href="">Mijn vrienden</a>
+                    <a href="vrienden.html">Mijn vrienden</a>
                 </li>
             </ul>
         </nav>
