--- a/minstelikes.html
+++ b/minstelikes.html
@@ -18,13 +18,13 @@
         <nav>
 
             <ul id="navigation">
-
                 <li>
                     <a href="inlogscherm.html"> <img id="profile" src="Assets/gebruikericon.png" alt="profilebutton">
                     </a>
                 </li>
+
                 <li>
-                    <a href="inlogscherm.html"> <img class="boek" id="profile" src="Assets/80719-200.png" alt="profilebutton">
+                    <a href="inlogscherm.html"> <img class="boek" id="profile" src="Assets/melding.jpg" alt="profilebutton">
                     </a>
                 </li>
 
@@ -33,15 +33,13 @@
                     </label>
                 </li>
 
-
             </ul>
 
             <a href="index.html">
                 <h1>NS Verhalen voor onderweg</h1>
             </a>
-
             <form action="/">
-                <input type="text" id="searchbar">
+                <input type="text" id="searching" alt="searchbar">
                 <button>Ga ></button>
             </form>
         </nav>
@@ -62,7 +60,7 @@
             </ul>
             <ul id="vrienden">
                 <li>
-                    <a href="">Mijn vrienden</a>
+                    <a href="vrienden.html">Mijn vrienden</a>
                 </li>
             </ul>
         </nav>
