--- a/profiel.html
+++ b/profiel.html
@@ -42,7 +42,7 @@
             </a>
 
             <form action="/">
-                <input type="text" id="searchbar">
+                <input type="text" id="searching" alt="searchbar">
                 <button>Ga ></button>
             </form>
         </nav>
