--- a/artikelalzheimer.html
+++ b/artikelalzheimer.html
@@ -55,7 +55,7 @@
         <p>
             Vond je het een goed verhaal? Geef dit verhaal dan een hartje!
         </p>
-        <a href="index.html" id="meerlezen"> Meer lezen?  ></a>
+        <a href="artikelkinderboek.html" id="meerlezen"> Meer lezen?  ></a>
 
         <footer>
             <p>23 keer leuk gevonden</p>
