--- a/artikelkinderboek.html
+++ b/artikelkinderboek.html
@@ -39,8 +39,6 @@
 
             </ul>
 
-
-
             <a href="index.html">
                 <h1>NS Verhalen voor onderweg</h1>
             </a>
@@ -58,7 +56,7 @@
         <p>
             Vond je het een goed verhaal? Geef dit verhaal dan een hartje!
         </p>
-        <a href="index.html" id="meerlezen"> Meer lezen?  ></a>
+        <a href="artikelblind.html" id="meerlezen"> Meer lezen?  ></a>
 
         <footer>
             <p>3 keer leuk gevonden</p>
