--- a/suggesties.html
+++ b/suggesties.html
@@ -43,7 +43,6 @@
             <form action="/">
                 <input type="text" id="searching" alt="searchbar">
                 <button>Ga ></button>
-
             </form>
         </nav>
     </header>
@@ -63,7 +62,7 @@
             </ul>
             <ul id="vrienden">
                 <li>
-                    <a href="">Mijn vrienden</a>
+                    <a href="vrienden.html">Mijn vrienden</a>
                 </li>
             </ul>
         </nav>
@@ -147,6 +146,7 @@
             </article>
         </section>
     </main>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
