--- a/artikelblind.html
+++ b/artikelblind.html
@@ -55,7 +55,7 @@
         <p>
             Vond je het een goed verhaal? Geef dit verhaal dan een hartje!
         </p>
-        <a href="index.html" id="meerlezen"> Meer lezen?  ></a>
+        <a href="artikelalzheimer.html" id="meerlezen"> Meer lezen?  ></a>
 
         <footer>
             <p>12 keer leuk gevonden</p>
