extra verhalen hovers

--- a/artikelblind.html
+++ b/artikelblind.html
@@ -25,15 +25,14 @@
                 </li>
 
                 <li>
-                    <a href="inlogscherm.html"> <img class="boek" id="profile" src="Assets/melding.jpg" alt="profilebutton">
+                    <a href="inlogscherm.html"> <img class="boek" id="profile" src="Assets/melding.png" alt="profilebutton">
                     </a>
-                </li>
 
-                <li>
+                    <li>
 
-                    <label for="searching"> <img id="search" src="Assets/searchicon.png" alt="searchbutton">
+                        <label for="searching"> <img id="search" src="Assets/searchicon.png" alt="searchbutton">
                     </label>
-                </li>
+                    </li>
 
             </ul>
 
@@ -59,8 +58,8 @@
 
         <footer>
             <p>12 keer leuk gevonden</p>
-            <a href="inlogscherm.html"> <img id="heart" src="Assets/hearticon.png" alt="hearticon"></a>
-            <a href="inlogscherm.html"> <img id="add" src="Assets/plusicon.png" alt="addicon"></a>
+            <img id="heart" src="Assets/hearticon.png" alt="hearticon">
+            <img id="add" src="Assets/plusicon.png" alt="addicon">
 
         </footer>
     </section>
