--- a/meestelikes.html
+++ b/meestelikes.html
@@ -24,7 +24,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="inlogscherm.html"> <img class="boek" id="profile" src="Assets/melding.jpg" alt="profilebutton">
+                    <a href="inlogscherm.html"> <img class="boek" id="profile" src="Assets/melding.png" alt="profilebutton">
                     </a>
                 </li>
 
@@ -40,8 +40,8 @@
                 <h1>NS Verhalen voor onderweg</h1>
             </a>
 
-            <form action="/">
-                <input type="text" id="searchbar">
+             <form action="/">
+                <input type="text" id="searching" alt="searchbar">
                 <button>Ga ></button>
             </form>
         </nav>
@@ -62,7 +62,7 @@
             </ul>
             <ul id="vrienden">
                 <li>
-                    <a href="">Mijn vrienden</a>
+                   <a href="vrienden.html">Mijn vrienden</a>
                 </li>
             </ul>
         </nav>
