--- a/profiel.html
+++ b/profiel.html
@@ -24,7 +24,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="inlogscherm.html"> <img class="boek" id="profile" src="Assets/melding.jpg" alt="profilebutton">
+                   <a href="inlogscherm.html"> <img class="boek" id="profile" src="Assets/melding.png" alt="profilebutton">
                     </a>
                 </li>
 
