--- a/artikelkinderboek.html
+++ b/artikelkinderboek.html
@@ -26,7 +26,7 @@
                 </li>
 
                 <li>
-                    <a href="inlogscherm.html"> <img class="boek" id="profile" src="Assets/melding.jpg" alt="profilebutton">
+                    <a href="inlogscherm.html"> <img class="boek" id="profile" src="Assets/melding.png" alt="profilebutton">
                     </a>
                 </li>
 
@@ -60,8 +60,8 @@
 
         <footer>
             <p>3 keer leuk gevonden</p>
-            <a href="inlogscherm.html"> <img id="heart" src="Assets/hearticon.png" alt="hearticon"></a>
-            <a href="inlogscherm.html"> <img id="add" src="Assets/plusicon.png" alt="addicon"></a>
+            <img id="heart" src="Assets/hearticon.png" alt="hearticon">
+            <img id="add" src="Assets/plusicon.png" alt="addicon">
 
         </footer>
     </section>
