--- a/artikelkinderboek.html
+++ b/artikelkinderboek.html
@@ -60,8 +60,8 @@
 
         <footer>
             <p>3 keer leuk gevonden</p>
-            <img id="heart" src="Assets/hearticon.png" alt="hearticon">
-            <img id="add" src="Assets/plusicon.png" alt="addicon">
+            <img src="Assets/hearticon.png" alt="hearticon">
+            <img src="Assets/plusicon.png" alt="addicon">
 
         </footer>
     </section>
