alles aanpassen met het eentje

--- a/artikelalzheimer.html
+++ b/artikelalzheimer.html
@@ -24,7 +24,7 @@
                     </a>
                 </li>
                 <li>
-                     <a href="inlogscherm.html"> <img class="boek" id="profile" src="Assets/melding.png" alt="profilebutton">
+                     <a href="inlogscherm.html"> <img class="eentje" id="profile" src="Assets/melding.png" alt="profilebutton">
                     </a>
                 </li>
 
@@ -59,8 +59,8 @@
 
         <footer>
             <p>23 keer leuk gevonden</p>
-            <a href="inlogscherm.html"> <img id="heart" src="Assets/hearticon.png" alt="hearticon"></a>
-            <a href="inlogscherm.html"> <img id="add" src="Assets/plusicon.png" alt="addicon"></a>
+           <img id="heart" src="Assets/hearticon.png" alt="hearticon">
+            <img id="add" src="Assets/plusicon.png" alt="addicon">
 
         </footer>
     </section>
