--- a/artikelkinderboek.html
+++ b/artikelkinderboek.html
@@ -26,7 +26,7 @@
                 </li>
 
                 <li>
-                    <a href="inlogscherm.html"> <img class="boek" id="profile" src="Assets/melding.png" alt="profilebutton">
+                   <a href="inlogscherm.html"> <img class="eentje" id="profile" src="Assets/melding.png" alt="profilebutton">
                     </a>
                 </li>
 
