--- a/inlogscherm.html
+++ b/inlogscherm.html
@@ -25,7 +25,7 @@
                     </a>
                 </li>
                 <li>
-                     <a href="inlogscherm.html"> <img class="boek" id="profile" src="Assets/melding.png" alt="profilebutton">
+                    <a href="inlogscherm.html"> <img class="eentje" id="profile" src="Assets/melding.png" alt="profilebutton">
                     </a>
                 </li>
 
